button issue on IE and firefox #8859

--- a/public/less/sections/common-button.less
+++ b/public/less/sections/common-button.less
@@ -69,6 +69,9 @@
         .addnew{
             width: auto;
         }
+        .export_btn_select{
+            width: auto !important;
+        }
     }
     @media (max-width: 820px) {
         .fix-btn {
